# appreels

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/appreels/: Cargo.toml
crates/appreels-capture/: Cargo.toml
crates/appreels-capture/src/: lib.rs
crates/appreels-render/: Cargo.toml
crates/appreels-render/src/: cards.rs  effects.rs  lib.rs  text.rs  timeline.rs
crates/appreels-script/: Cargo.toml
crates/appreels-script/src/: lib.rs
crates/appreels/src/: cli.rs  doctor.rs  main.rs
crates/polish-core/: Cargo.toml
crates/polish-core/src/: lib.rs
docs/superpowers/plans/: 2026-06-02-appreels-phase1-foundation.md  2026-06-02-appreels-phase2-recorder.md  2026-06-03-appreels-phase3-effects.md
docs/superpowers/specs/: 2026-06-02-appreels-design.md  2026-06-03-appreels-phase3-effects-design.md
examples/: browser-actions-showcase.html  browser-actions-showcase.json  terminal-cli-showcase.json
scripts/: verify
