[workspace]
resolver = "2"
members = ["crates/polish-core", "crates/appreels-script", "crates/appreels", "crates/appreels-capture"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/solomonneas/appreels"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
