[package]
name = "appreels-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "appreels post-render: polish-core framing of recorded video"

[dependencies]
polish-core = { path = "../polish-core" }
image = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ab_glyph = "0.2"
