[package]
name = "appreels-script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "appreels demo-script format (serde + JSON schema)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
