[package]
name = "appreels"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent-neutral polished demo-video recorder"

[[bin]]
name = "appreels"
path = "src/main.rs"

[dependencies]
appreels-script = { path = "../appreels-script" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
